LSP fixes